--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,7 +28,7 @@
     "@type": "Organization",
     "name": "Urbivista",
     "url": "https://www.urbivista.io/",
-    "logo": "https://www.urbivista.io/Urbivista_Logo_FullColor.png",
+    "logo": "https://www.urbivista.io/Urbivista_Logo_FullColor%20-%20Unstacked-1.png",
     "sameAs": []
   }
   </script>
@@ -51,7 +52,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="Urbivista home">
-        <img class="brand-logo" src="Urbivista_Logo_FullColor.png" alt="Urbivista logo" />
+        <img class="brand-logo" src="Urbivista_Logo_FullColor - Unstacked-1.png" alt="Urbivista logo" />
       </a>
 
       <nav class="nav">
@@ -234,7 +235,7 @@
           <p class="section-sub">Request a demo or briefing and we’ll walk through your use case.</p>
         </div>
         <div class="cta-actions">
-          <a class="btn" href="mailto:hello@urbivista.io">Email Us</a>
+          <a class="btn" href="mailto:luke@urbivista.io">Email Us</a>
           <a class="btn btn-ghost" href="blog.html">Read the Blog</a>
         </div>
       </div>
