--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <span class="tag">Data layer</span>
             </div>
             <p class="muted">
-              Compare sites using normalized metrics—demographics, demand signals, and strategic fit.
+              Compare sites using demographic data, demand signals, and strategic fit.
             </p>
             <img class="feature-img" src="location-intelligence.png" alt="Location intelligence dashboard preview" />
           </article>
