--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <title>Urbivista | Enterprise Location Intelligence for Defensible Site Selection</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <meta name="description" content="Urbivista helps enterprise teams evaluate locations with defensible, audit-ready location intelligence—site scoring, scenario modeling, and executive-ready reporting." />
-  <meta name="keywords" content="site selection software, location intelligence, enterprise site selection, location analytics, scenario modeling, retail expansion strategy" />
-
+  <meta name="description" content="Urbivista helps enterprise teams and commercial real estate stakeholders evaluate locations with defensible, audit-ready location intelligence—site scoring, scenario modeling, and executive-ready reporting." />
   <link rel="canonical" href="https://www.urbivista.io/" />
 
   <meta property="og:title" content="Urbivista | Defensible Location Intelligence" />
@@ -18,6 +16,7 @@
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="Urbivista_Logo_FullColor.png" />
 
+  <!-- Organization schema -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -29,6 +28,7 @@
   }
   </script>
 
+  <!-- Website schema -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -40,6 +40,47 @@
       "target": "https://www.urbivista.io/blog.html?q={search_term_string}",
       "query-input": "required name=search_term_string"
     }
+  }
+  </script>
+
+  <!-- Service + area served schema (NWI + NE Chicagoland) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ProfessionalService",
+    "name": "Urbivista",
+    "url": "https://www.urbivista.io/",
+    "serviceType": [
+      "Site selection",
+      "Location intelligence",
+      "Commercial real estate site selection",
+      "Location analytics",
+      "Scenario modeling"
+    ],
+    "areaServed": [
+      {"@type":"City","name":"Valparaiso","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
+      {"@type":"City","name":"Merrillville","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
+      {"@type":"City","name":"Michigan City","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
+      {"@type":"City","name":"Crown Point","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
+      {"@type":"City","name":"Hammond","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
+      {"@type":"City","name":"Gary","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
+      {"@type":"City","name":"Schererville","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
+      {"@type":"City","name":"Munster","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
+      {"@type":"City","name":"Highland","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
+      {"@type":"City","name":"Dyer","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
+      {"@type":"City","name":"St. John","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
+      {"@type":"City","name":"Portage","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
+      {"@type":"City","name":"Chesterton","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
+      {"@type":"City","name":"Hobart","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
+      {"@type":"City","name":"La Porte","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
+      {"@type":"City","name":"East Chicago","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
+      {"@type":"City","name":"Whiting","address":{"@type":"PostalAddress","addressRegion":"IN","addressCountry":"US"}},
+      {"@type":"City","name":"Chicago","address":{"@type":"PostalAddress","addressRegion":"IL","addressCountry":"US"}},
+      {"@type":"City","name":"Evanston","address":{"@type":"PostalAddress","addressRegion":"IL","addressCountry":"US"}},
+      {"@type":"City","name":"Skokie","address":{"@type":"PostalAddress","addressRegion":"IL","addressCountry":"US"}},
+      {"@type":"City","name":"Park Ridge","address":{"@type":"PostalAddress","addressRegion":"IL","addressCountry":"US"}},
+      {"@type":"City","name":"Des Plaines","address":{"@type":"PostalAddress","addressRegion":"IL","addressCountry":"US"}}
+    ]
   }
   </script>
 </head>
@@ -61,6 +102,7 @@
           <a href="#platform">Platform</a>
           <a href="#product">Product</a>
           <a href="#solutions">Solutions</a>
+          <a href="service-areas.html">Service Areas</a>
           <a href="blog.html">Blog</a>
           <a class="btn btn-small" href="#contact">Contact</a>
         </div>
@@ -73,6 +115,7 @@
         <a href="#platform" class="mobile-link">Platform</a>
         <a href="#product" class="mobile-link">Product</a>
         <a href="#solutions" class="mobile-link">Solutions</a>
+        <a href="service-areas.html" class="mobile-link">Service Areas</a>
         <a href="blog.html" class="mobile-link">Blog</a>
         <a href="#contact" class="btn btn-block">Contact</a>
       </div>
@@ -226,6 +269,31 @@
       </div>
     </section>
 
+    <!-- SEO + Local Coverage -->
+    <section class="section section-alt">
+      <div class="container">
+        <h2>Site Selection in Northwest Indiana & Northeast Chicagoland</h2>
+        <p class="section-sub">
+          We support defensible site selection and location intelligence across Northwest Indiana—Valparaiso, Merrillville,
+          Michigan City, Crown Point, Hammond, Gary, Schererville, Munster, Highland, Dyer, St. John, Portage, Chesterton,
+          Hobart, La Porte—and the Northeast Chicago suburbs.
+        </p>
+
+        <div class="card subtle">
+          <p class="muted" style="margin:0;">
+            Explore regional coverage:
+            <a href="service-areas.html">Service Areas</a> ·
+            <a href="service-areas/site-selection-valparaiso-in.html">Valparaiso</a> ·
+            <a href="service-areas/site-selection-merrillville-in.html">Merrillville</a> ·
+            <a href="service-areas/site-selection-michigan-city-in.html">Michigan City</a> ·
+            <a href="service-areas/site-selection-crown-point-in.html">Crown Point</a> ·
+            <a href="service-areas/site-selection-hammond-in.html">Hammond</a> ·
+            <a href="service-areas/site-selection-chicago-il.html">Chicago</a>
+          </p>
+        </div>
+      </div>
+    </section>
+
     <!-- CTA -->
     <section id="contact" class="section cta">
       <div class="container cta-inner">
@@ -245,6 +313,7 @@
     <div class="container footer-inner">
       <p class="muted">© <span id="year"></span> Urbivista. All rights reserved.</p>
       <div class="footer-links">
+        <a href="service-areas.html">Service Areas</a>
         <a href="blog.html">Blog</a>
         <a href="#contact">Contact</a>
       </div>
