--- a/service-areas/chicagoland-il.html
+++ b/service-areas/chicagoland-il.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<title>Site Selection in Chicagoland | Urbivista</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="description" content="Defensible site selection across Chicago and surrounding suburbs including Naperville, Schaumburg, Evanston, Skokie, and more." />
+<link rel="canonical" href="https://www.urbivista.io/service-areas/chicagoland-il.html" />
+<link rel="stylesheet" href="../styles.css" />
+<link rel="icon" href="../Urbivista_Logo_FullColor.png" />
+</head>
 
+<body>
+<header class="site-header">
+<div class="container header-inner">
+<a class="brand" href="../index.html">
+<img class="brand-logo" src="../Urbivista_Logo_FullColor - Unstacked-1.png" />
+</a>
+</div>
+</header>
+
+<main class="section">
+<div class="container">
+<h1>Site Selection in Chicagoland</h1>
+<p class="muted">
+Chicago, Naperville, Schaumburg, Evanston, Skokie, Oak Park,
+Des Plaines, Arlington Heights, Palatine, Lombard, Downers Grove,
+Orland Park, Tinley Park, Elmhurst, Wheaton, Glenview.
+</p>
+<p><a href="../service-areas.html">← Back</a></p>
+</div>
+</main>
+
+<footer class="footer">
+<p class="muted">© <span id="year"></span> Urbivista</p>
+</footer>
+<script>document.getElementById("year").textContent=new Date().getFullYear();</script>
+</body>
+</html>
